@@ -21,7 +21,8 @@ var (
 	litecoin bool = false
 	txfilename string
 	stdin bool
-    hdwaltype uint = 0 // 0 - hadrened private derivation, 1 - normal private derevation (e.g. electrum compatible)
+    hdwaltype uint = 0
+    bip39bits uint = 0
 )
 
 func parse_config() {
@@ -75,7 +76,7 @@ func parse_config() {
 				case "hdtype":
 					v, e := strconv.ParseUint(ll[1], 10, 32)
 					if e == nil {
-						if v>=0 && v<=1 {
+						if v >= 0 && v <= 4 {
 							hdwaltype = uint(v)
 						} else {
 							println(i, "wallet.cfg: incorrect HD wallet type", v)
@@ -86,6 +87,20 @@ func parse_config() {
 						os.Exit(1)
 					}
 
+				case "bip39":
+					v, e := strconv.ParseUint(ll[1], 10, 32)
+					if e == nil {
+                        if v >= 128 && v <= 256 && (v % 32) == 0 {
+							bip39bits = uint(v)
+						} else {
+							println(i, "wallet.cfg: incorrect bip39 value", v)
+							os.Exit(1)
+						}
+					} else {
+						println(i, "wallet.cfg: value error for", ll[0], ":", e.Error())
+						os.Exit(1)
+					}
+                
 				case "type2sec":
 					type2sec = ll[1]
 
@@ -153,7 +168,8 @@ func parse_config() {
 	flag.UintVar(&keycnt, "n", keycnt, "Set the number of determinstic keys to be calculated by the wallet")
 	flag.BoolVar(&testnet, "t", testnet, "Testnet mode")
 	flag.UintVar(&waltype, "type", waltype, "Type of a deterministic wallet to be used (1 to 4)")
-	flag.UintVar(&hdwaltype, "hdtype", waltype, "Type of a deterministic wallet to be used (1 to 4)")
+	flag.UintVar(&hdwaltype, "hdtype", hdwaltype, "Type of a deterministic wallet to be used (1 to 4)")
+	flag.UintVar(&bip39bits, "bip39", bip39bits, "Create HD Wallet in BIP39 mode (with 128, 160, 192, 224 or 256 entropy bits)")
 	flag.StringVar(&type2sec, "t2sec", type2sec, "Enforce using this secret for Type-2 wallet (hex encoded)")
 	flag.BoolVar(&uncompressed, "u", uncompressed, "Deprecated in this version")
 	flag.StringVar(&fee, "fee", fee, "Specify transaction fee to be used")
