@@ -13,11 +13,17 @@
 # Is this a Testnet wallet
 #testnet=true
 
-# Deterministic wallet type. 4 is HD Wallet. Default is 3.
+# Deterministic wallet type. 4 is HD Wallet. Default is 3 (Gocoin specific)
 #type=3
 
-# HD wallet type: 0 - hardened private key derivation, 1 - regular (e.g. Electrum compatible)
-#hdwaltype=0
+# Key Derivation Path: 0 - Gocoin, 1 - Electrum, 2 - Bitcoin Core, 3 - Multibit HD, BRD
+#     4 - Coinomi, Ledger
+# The value is ignored for wallets of type different than 4.
+#hdtype=2
+
+# Create HD Wallet in BIP39 mode (with 128, 160, 192, 224 or 256 entropy bits)
+# The value is ignored for wallets of type different than 4.
+#bip39=128
 
 # Hex encoded secret value for Type-2 deterministic wallet.
 # When not specified, it gets calculated from seed password.
